# dk_pro_stt

./: .env.example  .example_secrets.toml  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  prompt.md  pyproject.toml  settings.toml
config/prometheus/: prometheus.yml
migrations/: env.py
prompts/: 00_general_prompt.md  01_architecture.md  02_infrastructure.md  03_telegram_bot.md  04_ci_cd.md  05_api_specification.md  06_audio_processing.md  07_whisper_integration.md  08_diarization.md  09_task_system.md  10_error_handling.md  11_user_dialogs.md  12_export_formats.md  13_webapp_player.md  14_error_handling_ux.md  15_monitoring.md  16_load_testing.md  17_documentation.md
src/: main.py
src/config/: settings.py
src/domains/audio/: entities.py  exceptions.py  repositories.py  services.py
src/domains/diarization/: entities.py  exceptions.py  repositories.py  services.py
src/domains/export/: entities.py  exceptions.py  repositories.py  services.py
src/domains/transcription/: entities.py  exceptions.py  repositories.py  services.py
src/domains/user/: entities.py  exceptions.py  repositories.py  services.py
src/infrastructure/database/: models.py  repositories.py
src/infrastructure/messaging/: event_bus.py  nats_client.py
src/infrastructure/storage/: object_storage.py
src/infrastructure/telegram/: bot.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py
tests/integration/infrastructure/: __init__.py  test_database.py  test_nats.py  test_redis.py
tests/unit/domains/: __init__.py
(+20 files in other folders)
