[project]
name = "dk-pro-stt"
version = "0.1.0"
description = "Audio Transcription Bot with Speaker Diarization"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "aiogram>=3.20.0",
    "sqlalchemy>=2.0.41",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.9.0",
    "structlog>=25.4.0",
    "uvicorn>=0.34.0",
]
