[project]
name = "dk-pro-stt"
version = "0.1.0"
description = "Audio Transcription Bot with Speaker Diarization"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "aiogram>=3.20.0",
    "sqlalchemy>=2.0.41",
    "psycopg>=3.2.9",
    "structlog>=25.4.0",
    "uvicorn>=0.34.0",
    "redis>=6.2.0",
    "pytest>=8.4.0",
    "dynaconf>=3.2.11",
    "nats-py>=2.10.0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.16.2",
]
